Improve ui tests (iteration2)